<resources>
    <string name="app_name">Grocery List</string>
    <string name="pizza">Pizza</string>
    <string name="shampoo">Shampoo</string>
    <string name="coffee">Coffee</string>
    <string name="chips">Chips</string>
    <string name="delete_checked">Delete Checked</string>
    <string name="clear_all">Clear All</string>
    <string name="add_item">Add Item</string>
    <string name="show_shopping_list">Show Shopping List</string>
    <string name="show_master_list">Show Master List</string>
    <string name="description">Description:</string>
    <string name="enter_description">Enter description</string>
    <string name="add">Add</string>
    <string name="back">Return</string>
    <string name="api_grocerylist">https://fvtcdp.azurewebsites.net/api/GroceryList/</string>
    <string name="groceryprefs">groceryPreferences</string>
    <string name="change_owner">Change Owner</string>
    <string name="select_image">Select Image</string>
    <string name="image">Image</string>
</resources>